# localwl

./: CMakeLists.txt  README.md  main.cpp
src/: AuxiliaryMethods.cpp  AuxiliaryMethods.h  ColorRefinementKernel.cpp  ColorRefinementKernel.h  GenerateThree.cpp  GenerateThree.h  GenerateThreeSampling.cpp  GenerateThreeSampling.h  GenerateTwo.cpp  GenerateTwo.h  Graph.cpp  Graph.h
